// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root fading quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-content="451b5541"
          fill="none"
          height="24"
          viewBox="0 0 190 24"
          width="190"
        />
      </button>
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <nav
      aria-label="Main Navigation"
      class="topNav"
    >
      <button
        aria-label="New task"
        class="navItem newSession"
        type="button"
      >
        <svg
          data-content="c0ce4dcc"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          New task
        </span>
        <span
          class="shortcutBadge"
        >
          Ctrl+N
        </span>
      </button>
      <button
        aria-label="Search"
        class="navItem"
        type="button"
      >
        <svg
          data-content="4ca56c6d"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          Search
        </span>
        <span
          class="shortcutBadge"
        >
          Ctrl+K
        </span>
      </button>
      <button
        aria-label="Automations"
        class="navItem"
        type="button"
      >
        <svg
          data-content="04a7472f"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          Automations
        </span>
      </button>
      <button
        aria-label="Plugin Marketplace"
        class="navItem"
        type="button"
      >
        <svg
          data-content="d149a390"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          Plugin Marketplace
        </span>
      </button>
      <button
        aria-label="Design"
        class="navItem"
        type="button"
      >
        <svg
          data-content="99655d86"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          Design
        </span>
      </button>
    </nav>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="footRow"
      >
        <div
          class="settingsArea"
        >
          <div
            data-slot="sidebar.settings"
            style="display: contents;"
          />
        </div>
        <button
          aria-label="Mobile Remote"
          class="footIconButton"
          type="button"
        >
          <svg
            data-content="23db5823"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-content="451b5541"
          fill="none"
          height="24"
          viewBox="0 0 190 24"
          width="190"
        />
      </button>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <nav
      aria-label="Main Navigation"
      class="topNav"
    >
      <button
        aria-label="New task"
        class="navItem newSession"
        type="button"
      >
        <svg
          data-content="c0ce4dcc"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          New task
        </span>
        <span
          class="shortcutBadge"
        >
          Ctrl+N
        </span>
      </button>
      <button
        aria-label="Search"
        class="navItem"
        type="button"
      >
        <svg
          data-content="4ca56c6d"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          Search
        </span>
        <span
          class="shortcutBadge"
        >
          Ctrl+K
        </span>
      </button>
      <button
        aria-label="Automations"
        class="navItem"
        type="button"
      >
        <svg
          data-content="04a7472f"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          Automations
        </span>
      </button>
      <button
        aria-label="Plugin Marketplace"
        class="navItem"
        type="button"
      >
        <svg
          data-content="d149a390"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          Plugin Marketplace
        </span>
      </button>
      <button
        aria-label="Design"
        class="navItem"
        type="button"
      >
        <svg
          data-content="99655d86"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          Design
        </span>
      </button>
    </nav>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="footRow"
      >
        <div
          class="settingsArea"
        >
          <div
            data-slot="sidebar.settings"
            style="display: contents;"
          />
        </div>
        <button
          aria-label="Mobile Remote"
          class="footIconButton"
          type="button"
        >
          <svg
            data-content="23db5823"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="新建会话"
        class="brand wide"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-content="451b5541"
          fill="none"
          height="24"
          viewBox="0 0 190 24"
          width="190"
        />
      </button>
      <button
        aria-label="收起侧边栏"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <nav
      aria-label="Main Navigation"
      class="topNav"
    >
      <button
        aria-label="新建任务"
        class="navItem newSession"
        type="button"
      >
        <svg
          data-content="c0ce4dcc"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          新建任务
        </span>
        <span
          class="shortcutBadge"
        >
          Ctrl+N
        </span>
      </button>
      <button
        aria-label="搜索"
        class="navItem"
        type="button"
      >
        <svg
          data-content="4ca56c6d"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          搜索
        </span>
        <span
          class="shortcutBadge"
        >
          Ctrl+K
        </span>
      </button>
      <button
        aria-label="自动化"
        class="navItem"
        type="button"
      >
        <svg
          data-content="04a7472f"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          自动化
        </span>
      </button>
      <button
        aria-label="插件市场"
        class="navItem"
        type="button"
      >
        <svg
          data-content="d149a390"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          插件市场
        </span>
      </button>
      <button
        aria-label="设计"
        class="navItem"
        type="button"
      >
        <svg
          data-content="99655d86"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          设计
        </span>
      </button>
    </nav>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="footRow"
      >
        <div
          class="settingsArea"
        >
          <div
            data-slot="sidebar.settings"
            style="display: contents;"
          />
        </div>
        <button
          aria-label="移动端远程"
          class="footIconButton"
          type="button"
        >
          <svg
            data-content="23db5823"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
